--- a/styles/style.css
+++ b/styles/style.css
@@ -7,12 +7,12 @@ body{
     background-color: #f3f1ff;
 
 }
-main{
+/* main{
     display: flex;
     flex-direction: column;
     
     align-items: center;
-}
+} */
 .container{
     background-color: #FFFFFF;
     width: 870px;
@@ -133,8 +133,8 @@ hr{
     
 }
 /* ipad screen */
-@media only screen and(min-width:688px)and(max-width:992px) {
+@media  screen and (min-width:688px) and (max-width:992px) {
     .players{
-        background-color: turquoise;
+        background-color: red;
     }
 }
